Added a repository field to the package.json file

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Generates checksums and renames references to files, useful for cachebusting",
   "version": "0.0.1",
   "author": "Josiah <josiah@web-dev.com.au>",
+  "repository": "git@github.com:Josiah/gulp-cachebust.git",
   "dependencies": {
     "through2": "^0.4.1",
     "gulp-util": "^2.2.14"
