Updated references to us ~ semver references

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Josiah <josiah@web-dev.com.au>",
   "repository": "git@github.com:Josiah/gulp-cachebust.git",
   "dependencies": {
-    "through2": "^0.4.1",
-    "gulp-util": "^2.2.14"
+    "through2": "~0.4.1",
+    "gulp-util": "~2.2.14"
   }
 }
