Added unit tests for simple methods.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
   "license": "MIT",
   "author": "Josiah <josiah@web-dev.com.au>",
   "repository": "git@github.com:Josiah/gulp-cachebust.git",
+  "scripts": {
+    "test": "node_modules/.bin/mocha"
+  },
   "dependencies": {
     "through2": "^0.5.1",
     "gulp-util": "^3.0.0",
     "slash": "1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "lodash": "^3.10.1",
+    "mocha": "^2.3.4",
+    "vinyl": "^1.1.0"
   }
 }
